experimenting with some hacks for version numbers

--- a/doc/sphinx/Makefile
+++ b/doc/sphinx/Makefile
@@ -14,6 +14,8 @@ docs: html
 symlink-docs: clean-symlink-docs
 	@echo "Setting up symlinks from /doc/release to /doc/sphinx/source"
 	./symlinks.py
+	cp  ../release/quickReference.pdf     source/language/reference.pdf
+	cp  ../release/chapelLanguageSpec.pdf source/language/spec.pdf
 
 clean: clean-source
 
@@ -26,6 +28,8 @@ clean-source: clean-symlink-docs clean-module-docs
 clean-symlink-docs: FORCE
 	@echo "Removing all symbolic links contained in source/"
 	find source -type l -delete
+	rm -f language/reference.pdf
+	rm -f language/spec.pdf
 
 clean-module-docs: FORCE
 	rm -rf source/modules/standard
